--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,11 @@
         </tbody>
     </table>
 
+    <h2><label>Para vender da clic acá</label></h2>
+    <form action="vender" method="get">
+        <button type="submit">Ir a otra página</button>
+    </form>
+
     <!-- <h2>Estas son los ingredientes de la heladería</h2>
     <table>
         <thead>
